--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,7 @@
     "build": "rimraf dist && tsc --build tsconfig.json",
     "preserve": "npm run build",
     "serve": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon -L dist/index.js\"",
-    "prestart": "npm run build",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -28,7 +27,11 @@
     "@types/cors": "^2.8.12",
     "@types/express": "4.16",
     "@types/node": "^16.11.11",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "concurrently": "^6.4.0",
+    "eslint": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
     "ts-node-dev": "^1.1.8",
     "tslint": "^5.12.1",
