--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,3 @@
-PORT=5000
-DB_CONN_STRING="mongodb://mongo:27017"
-DB_NAME="notes_application"
-DB_COLLECTION="notes"
+COLLECTION_NAME=chicken_coop
+DB_NAME=chicken_coop
+COLLECTION_NAME=henns
