--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "mongodb": "^4.2.1",
+    "mongoose": "^6.1.2",
     "rimraf": "^2.7.1",
     "ts-node": "^9.1.1"
   },
