--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "preserve": "npm run build",
     "serve": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon -L dist/index.js\"",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "npm run build",
+    "test": "jest"
   },
   "dependencies": {
     "@types/body-parser": "^1.19.2",
@@ -21,19 +22,27 @@
     "helmet": "^4.6.0",
     "mongodb": "^4.2.1",
     "mongoose": "^6.1.2",
-    "rimraf": "^2.7.1",
-    "ts-node": "^9.1.1"
+    "rimraf": "^2.7.1"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.1.17",
+    "@types/chai": "^4.3.0",
     "@types/cors": "^2.8.12",
     "@types/express": "4.16",
+    "@types/jest": "^27.0.3",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.11",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "concurrently": "^6.4.0",
     "eslint": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.4.5",
     "nodemon": "^2.0.15",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.1.2",
+    "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "tslint": "^5.12.1",
     "typescript": "^3.9.10"
