--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
-COLLECTION_NAME=chicken_coop
 DB_NAME=chicken_coop
 COLLECTION_NAME=henns
+MONGO_URL=mongodb+srv://dormakaba:dormakaba@cluster0.1yiwk.mongodb.net
+CLIENT=http://localhost:3000
+PORT=5000
