--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       - "3000:3000"
     environment:
       - REACT_APP_SERVER=http://localhost:5000
+      - CHOKIDAR_USEPOLLING=true
     networks:
       - mern-network
 
