--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "rimraf dist && tsc --build tsconfig.json",
     "preserve": "npm run build",
-    "serve": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon -L dist/index.js\"",
+    "serve": "nodemon dist/index.js",
     "lint": "eslint . --ext .ts",
     "pretest": "npm run build",
     "test": "jest"
