--- a/client/package.json
+++ b/client/package.json
@@ -53,12 +53,15 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.5",
     "@babel/preset-typescript": "^7.16.5",
+    "@types/enzyme": "^3.10.10",
     "@types/jest": "^27.4.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "enzyme": "^3.11.0",
     "jest": "^26.6.3",
     "regenerator-runtime": "^0.13.9",
     "tailwindcss": "^3.0.2"
