--- a/client/package.json
+++ b/client/package.json
@@ -63,6 +63,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "enzyme": "^3.11.0",
     "jest": "^26.6.3",
+    "jest-extended": "^1.2.0",
     "regenerator-runtime": "^0.13.9",
     "tailwindcss": "^3.0.2"
   }
