--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,6 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "@mui/material": "^5.2.5",
-    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -21,8 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-scripts": "4.0.3",
-    "redux-thunk": "^2.4.1",
+    "react-scripts": "^4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -57,14 +54,12 @@
     "@types/jest": "^27.4.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "enzyme": "^3.11.0",
-    "jest": "^26.6.3",
+    "jest": "26.6.0",
     "jest-extended": "^1.2.0",
-    "regenerator-runtime": "^0.13.9",
-    "tailwindcss": "^3.0.2"
+    "regenerator-runtime": "^0.13.9"
   }
 }
