--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,8 +20,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "typeRoots": [
-        "./node_modules/@types",
-        "./src/typings"
+        "./src/type.d.ts"
     ]
   },
   "include": [
