--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Dormakaba apply project",
   "main": "./client/src/index.tsx",
   "scripts": {
+    "build": "npm install",
     "start": "concurrently \"cd ./server && npm run serve\" \"cd ./client && yarn start\"",
     "test": "concurrently \"cd ./server && npm run test\" \"cd ./client && yarn test\"",
     "test_coverage": "concurrently \"cd ./server && npx jest --coverage\" \"cd ./client && npx jest --coverage\""
