--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Dormakaba apply project",
   "main": "./client/src/index.tsx",
   "scripts": {
-    "build": "npm install",
+    "build": "concurrently \"npm install\" \"cd ./server && npm install\" \"cd ./client && yarn install\"",
     "start_client": "cd ./client && yarn start",
     "start": "concurrently \"cd ./server && npm run serve\" \"cd ./client && yarn start\"",
     "test": "concurrently \"cd ./server && npm run test\" \"cd ./client && yarn test\"",
